tests/specs/ecosystem/darwish/utils/0_1_1.test
darwish/utils/0.1.1
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/mod.ts
error: TS2305 [ERROR]: Module '"file://<tmpdir>/add/index.ts"' has no exported member 'default'.
export { default as add } from "./add/index.ts";
         ~~~~~~~
    at file://<tmpdir>/mod.ts:1:10

